--- a/src/components/notice/notice.css
+++ b/src/components/notice/notice.css
@@ -32,7 +32,7 @@
   height: 32px;
   top: 20px;
   left: 20px;
-  background-image: url(../images/atten.png);
+  background-image: url(../../media/images/atten.png);
 }
 
 .modal-text {
