--- a/src/pages/order/order.css
+++ b/src/pages/order/order.css
@@ -75,7 +75,7 @@
   display: flex;
   width: 68px;
   height: 68px;
-  background-image: url(../images/avatar.png);
+  background-image: url(../../media/images/avatar.png);
   margin: 60px 45px 17px 43px;
 }
 
