--- a/src/components/search-widget/search-widget.css
+++ b/src/components/search-widget/search-widget.css
@@ -50,7 +50,7 @@
   height: 60px;
   padding-left: 20px;
   background-color: #ffffff;
-  background-image: url(../images/vector.png);
+  background-image: url(../../media/images/vector.png);
   background-repeat: no-repeat;
   background-position: center right 17px;
 }
@@ -78,7 +78,7 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url(../images/direction.png);
+  background-image: url(../../media/images/direction.png);
   background-size: cover;
 }
 
@@ -138,7 +138,7 @@
   height: 60px;
   padding-left: 20px;
   background-color: #ffffff;
-  background-image: url(../images/calendar.png);
+  background-image: url(../../media/images/calendar.png);
   background-repeat: no-repeat;
   background-position: center right 17px;
 }
