--- a/src/pages/list-passengers/passenger.css
+++ b/src/pages/list-passengers/passenger.css
@@ -26,7 +26,7 @@
   display: flex;
   width: 18px;
   height: 18px;
-  background-image: url(../images/plus.png);
+  background-image: url(../../media/images/plus.png);
   margin-right: 38px;
   margin-left: auto;
   align-self: center;
@@ -96,11 +96,11 @@
 }
 
 .pass-header-up {
-  background-image: url(../images/pass-up.png);
+  background-image: url(../../media/images/pass-up.png);
 }
 
 .pass-header-down {
-  background-image: url(../images/pass-down.png);
+  background-image: url(../../media/images/pass-down.png);
 }
 
 .pass-header-title {
@@ -119,7 +119,7 @@
   width: 12px;
   height: 12px;
   cursor: pointer;
-  background-image: url(../images/close.png);
+  background-image: url(../../media/images/close.png);
   margin: 53px 40px 42px auto;
 }
 
@@ -154,7 +154,7 @@
   left: 250px;
   width: 12px;
   height: 5px;
-  background-image: url(../images/select.png);
+  background-image: url(../../media/images/select.png);
 }
 
 .list-age-select {
@@ -300,7 +300,7 @@
 
 .pass-check-input-ok {
   border: 1px solid #FFA800;
-  background-image: url(../images/ok.png);
+  background-image: url(../../media/images/ok.png);
   background-repeat: no-repeat;
   background-position: center;
 }
@@ -357,7 +357,7 @@
   right: 12px;
   width: 12px;
   height: 5px;
-  background-image: url(../images/select.png);
+  background-image: url(../../media/images/select.png);
 }
 
 .list-docs-select, .list-docs-select-long {
@@ -484,11 +484,11 @@
 }
 
 .pass-valid-close {
-  background-image: url(../images/valid-close.png);
+  background-image: url(../../media/images/valid-close.png);
 }
 
 .pass-valid-ok {
-  background-image: url(../images/valid-ok.png);
+  background-image: url(../../media/images/valid-ok.png);
 }
 
 .pass-valid-text {
